--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 					<section>
 						<h1 class="color-galaxy">how</h1>
 						<div class="fragment fade-right">data x information</div>
-						<div class="fragment fade-right">history of www</div>						
+						<div class="fragment fade-right">the past</div>						
 						<div class="fragment fade-right">----</div>
-						<div class="fragment fade-right">www today</div>			
+						<div class="fragment fade-right">the present</div>			
 						<div class="fragment fade-right">the good and bad parts</div>
 					</section>
 				</section>
