--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 						<span class="fragment fade-right">apply <div style="display:inline-block" class="color-wisdom circle small">wisdom</div></span>
 					</section>
 					<section>
-						<h1>Specific Persona</h1>
+						<h1>More Accurate Persona</h1>
 						<div class="fragment fade-in"><span class="fragment strike">👦</span><span class="fragment fade-right"><span data-id="p1">👨‍🦰</span><span data-id="p2">👱</span><span data-id="p3">👨‍🦱</span></span></div>
 					</section>
 					<section>
@@ -309,7 +309,6 @@
 						<img class="fragment fade-right" height="100px" src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" />
 						<img class="fragment fade-right" height="100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/800px-LinkedIn_logo_initials.png" />
 						<img class="fragment fade-right" height="100px" src="https://www.redditinc.com/assets/images/site/reddit-logo.png" />
-	
 					</section>
 					<section>
 						<div>User data is&nbsp;<span class="fragment fade-right color-mystery"> still </span>&nbsp;the primary focus of most companies</div>
@@ -509,7 +508,6 @@
 						<div class="fragment fade-right">🍗🍟🍝</div>
 					</section>
 					<section data-auto-animate>
-						<span>by tracking JOBOY's activities</span>
 						<table class="fragment fade-right" data-id="tinytable">
 							<tr><td>
 								<div style="margin: 0 auto">
@@ -585,6 +583,7 @@
 								
 							</td></tr>
 						</table>
+						<span class="fragment fade-in">by tracking JOBOY's activities</span>
 					</section>
 					<section>
 						<h1>Likes 👍</h1>
@@ -805,7 +804,11 @@
 					</section>
 					<section>
 						<h1 class="color-galaxy">thank you!</h1>
-						https://ruprechtcua.github.io/slides
+						<div><span class="fragment fade-right">My parents</span><span class="fragment fade-right">, educators</span><span class="fragment fade-right">, and to you!</span></div>
+					</section>
+					<section>
+						<a class="color-galaxy" target="_blank" href="https://ruprechtcua.github.io/slides">https://ruprechtcua.github.io/slides</a>
+						<br/>open for questions
 					</section>
 				</section>
 				
